# my_git_patterns

./: .pre-commit-config.yaml  README.md  code.py  pull_request.sh  requirements.txt
old/: pull_request.sh
project_base/: .gitignore  README.md  mkdocs.yml  pyproject.toml
project_base/docs/: index.md
project_base/project_base/: __init__.py
project_base/tests/: test_demo.py
